codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__vim_empty_normal_slash.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5217
expression: terminal.backend()
---
"› /model          choose what model and reasoning effort to "
"                  use                                       "
"  /ide            include current selection, open files, and"
"                  other context from your IDE               "
"  /permissions    choose what Zuno is allowed to do         "
"                                                            "
"› /                                                         "
"                                                            "
"                           100% context left | Vim: Insert  "
